<resources>
    <string name="app_name">AnimalHub</string>

    <string name="title_activity_registration_">Registration_Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="settings_file_name">userDataForChat</string>
    <string-array name="animals">
        <item>Dog</item>
        <item>Cat</item>
        <item>Birds</item>
    </string-array>

    <string name="sign_up"><u>Sign up</u></string>
    <string name="mail_address">Mail Address</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN!</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="u_forget_your_password"><u>Forget your password</u></string>
    <string name="reset_my_password">RESET MY PASSWORD</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="surname">Surname:</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="e_mail">E-mail:</string>
    <string name="email_address">Email Address</string>
    <string name="profile">Profile</string>
    <string name="dies">###</string>
    <string name="log_out">Log Out</string>

    <string name="title_activity_maps">Map</string>
    <string name="button_ok">Ok</string>
    <string name="button_no">No</string>
    <string name="emergency_text_message">Emergency Text Message</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAgsrGTRfHzUi_MKdzAWgHvG6k1BsFz2JA</string>
    <string name="APPLOZIC_APP_ID">1acac840b5bad8fa24e8d02c196a705d1</string>
    <string name="default_media_location_folder">animalhub</string>

</resources>